# collectore_server

./: CMakeLists.txt
conf/: log.conf
doc/: HTTP.MD
src/: CMakeLists.txt
src/common/: CMakeLists.txt  log.c  log.h  macro.h  object.c  object.h  port.h  session.c  session.h  timer.c  timer.h
src/server/: CMakeLists.txt  main.c  msg_collector.c  msg_collector.h  msg_proc_collector.c  msg_proc_collector.h  protocol.h  server_collector.c  server_collector.h  version.h
